[metadata]
name = networking-bgp-ovn
summary = BGP support for OVN
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://www.openstack.org/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    networking_bgp_ovn

[entry_points]
console_scripts =
    bgp-agent = networking_bgp_ovn.cmd.agent:start

networking_bgp_ovn.drivers =
    osp_ovn_bgp_driver = networking_bgp_ovn.drivers.openstack.ovn_bgp_driver:OSPOVNBGPDriver
    osp_ovn_evpn_driver = networking_bgp_ovn.drivers.openstack.ovn_evpn_driver:OSPOVNEVPNDriver
